<resources>
    <string name="app_name">PhotonDemo</string>
    <string name="button_leave_title">Leave Game</string>
    <string name="button_create_title">Create Game</string>
    <string name="button_create_alltoall_title">Create Game Direct All To All</string>
    <string name="button_create_mastertoall_title">Create Game Direct Master To All</string>
    <string name="button_join_title">Join Game</string>
</resources>